Fix >100% width bug on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -100,7 +100,7 @@ section {
 	padding: $unit  * 2;
 
 	@include mobile {
-		width: 100%;
+		width: auto;
 		float: none;
 	}
 }
